manifest/objects/ALTF__Template_Qualifier_Details__c.object
<CustomObject>
    <description>Holds config values which associate Genius qualifiers with different industry templates</description>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Buyer_Type__c</fullName>
        <label>Buyer Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Deal_Size__c</fullName>
        <label>Deal Size</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Importance__c</fullName>
        <label>Importance</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Sales_Cycle_Length__c</fullName>
        <label>Sales Cycle Length</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Short</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Long</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Stage_Number__c</fullName>
        <label>Stage Number</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Template_Qualifier_ID__c</fullName>
        <label>DMGQualifierID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Template_Qualifier__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>A lookup to the Template Qualifier for an a particular Qualifier Details</description>
        <label>Template Qualifier</label>
        <referenceTo>ALTF__Template_Qualifier__c</referenceTo>
        <relationshipLabel>Template Qualifiers</relationshipLabel>
        <relationshipName>Template_Qualifier</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Template_Type__c</fullName>
        <label>Template Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High Technology</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Energy &amp; Power</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Industrials</fullName>
                </value>
                <value>
                    <fullName>Materials</fullName>
                </value>
                <value>
                    <fullName>Telecommunications</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Altify Template Qualifier Details</label>
    <nameField>
        <label>Genius Qualifier Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Genius Qualifiers Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>